--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -6,8 +6,18 @@
 .maxWidthWrapper {
 }
 
+.grayBackground {
+  background-color: hsl(195deg, 20%, 86%);
+  height: 40%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +34,18 @@
 }
 
 .characterWrapper {
+  min-height: 500px;
+  position: fixed;
+  right: 0;
+  width: 35%;
+  bottom: 0;
+}
+
+.character {
+  height: 100%;
 }
 
 .controlColumn {
+  width: 50%;
+  isolation: isolate;
 }
